<resources>
    <string name="app_name">lab2</string>
    <string name="authorization">Авторизация</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="back">Назад</string>
    <string name="shop">START SHOPPING</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="confirm">Подтвердите пароль</string>
    <string name="name">Имя Фамилия</string>
    <string name="noAcc">Нет аккаунта? <b>Зарегестрируйтесь</b></string>
    <string name="registration">Уже есть аккаунт? <b>Войдите</b></string>
    <string name="welcome">Магазин вашей мечты. Здесь Вы найдете всё, что захотите</string>
    <string name="admin"><b>Войти как администратор</b></string>
    <string name="admName">Имя</string>
    <string name="admKey">Ключ</string>
    <string name="adm">Администратор</string>
    <string name="profile">Профиль</string>
    <string name="properties">Подробности</string>
</resources>